party impelement get report by userid
