# backend/swagger.yaml
@@ -14,7 +14,7 @@ paths:
     get:
       description: Get detailed plagiarism data for specified solution.
       summary: Get detailed plagiarism data for specified solution.
-      operationId: verifications.get_one
+      operationId: verifications_controller.get_one
       tags:
       - Verification of solution
       produces:
@@ -45,7 +45,7 @@ paths:
     post:
       summary: Check solution for plagiarism.
       description: Check solution for plagiarism.
-      operationId: verifications.post
+      operationId: verifications_controller.post
       tags:
         - Verification of solution
       produces:
@@ -72,7 +72,7 @@ paths:
     patch:
       summary: Set status of plagiarism for concrete solution.
       description: Set status of plagiarism for concrete solution.
-      operationId: verifications.patch
+      operationId: verifications_controller.patch
       tags:
         - Verification of solution
       produces:
@@ -98,7 +98,7 @@ paths:
 
   /metrics:
     get:
-      operationId: metrics.get
+      operationId: metrics_controller.get
       summary: List all metrics
       description: List all metrics
       tags:
@@ -128,7 +128,7 @@ paths:
           schema:
             $ref: "#/definitions/Error"
     post:
-      operationId: metrics.post
+      operationId: metrics_controller.post
       summary: Create new metric or append to existing in system.
       description: Create new metric or append to existing in system.
       tags:
@@ -158,7 +158,7 @@ paths:
 
   /metrics/{metricId}:
     get:
-      operationId: metrics.get_one
+      operationId: metrics_controller.get_one
       description: Get concrete metric by id
       tags:
         - Metric
@@ -187,7 +187,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
     patch:
-      operationId: metrics.patch
+      operationId: metrics_controller.patch
       description: Edit data for concrete metric
       tags:
         - Metric
@@ -218,7 +218,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
     delete:
-      operationId: metrics.delete
+      operationId: metrics_controller.delete
       description: Delete concrete metric using metricId
       tags:
         - Metric
